--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "axios": "^1.6.2",
