--- a/vercel-backend.json
+++ b/vercel-backend.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "intellicon-backend",
   "builds": [
     {
       "src": "api/index.py",
@@ -11,6 +12,9 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.9"
+  }
 }
 
