--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi>=0.104.0
-mangum>=0.17.0
+uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 Pillow>=10.0.0
+pytesseract>=0.3.10
 PyPDF2>=3.0.0
 requests>=2.31.0
 python-dotenv>=1.0.0
